# ML-Libary

./: .gitignore
src/basicneuron/: Example1PredictGoalsScored.java  Example1PredictGoalsScored_MatrixBased.java  Example2PredictTieGame.java  Example2PredictTieGame_MatrixBased.java
src/chart/: LineChart.java  LineLogChart.java
src/matrix/: ColumnVector.java  ColumnVectorImplementation.java  DegenerateMatrix.java  Matrix.java  MatrixBase.java  MatrixBaseWithOperations.java  MatrixDimensionException.java  MatrixException.java  MatrixFactory.java  MatrixOperations.java  RectangularMatrix.java  RowVector.java  RowVectorImplementation.java  Vector.java  VectorBase.java  regenerate_library_header.bat
src/matrix/exception/: MatrixColumnAccessException.java  MatrixDimensionException.java  MatrixDimensionMismatchException.java  MatrixElementAccessException.java  MatrixException.java  MatrixMultiplicationDimensionException.java  MatrixRowAccessException.java
src/matrix/native/: CMakeLists.txt
src/matrix/native/src/: library.cpp  library.h  matrix.cpp  matrix.h  test.cpp
src/neuralnet/: Model.java  NeuralNetException.java
src/neuralnet/layer/: ConvolutionalLayer.java  DenseLayer.java  FullyConnectedLayer.java  InputLayer.java  Layer.java
src/neuralnet/neuron/: ActivationFunction.java  LossFunction.java  Neuron.java  NeuronInputLengthException.java
src/neuralnet/util/: ArrayUtil.java  Logger.java  MathUtil.java
test/: Benchmarker.java  TestMatrix.java
